--- a/simulations-java/simulations/gene-network/data/gene-network/localization/gene-network-strings_iw.properties
+++ b/simulations-java/simulations/gene-network/data/gene-network/localization/gene-network-strings_iw.properties
@@ -1,5 +1,5 @@
-#gene-network-strings_iw.properties created Fri Jul 09 23:45:22 IDT 2010 using: gene-network 1.02.00 (41395), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Fri Jul 09 23:45:22 IDT 2010
+#gene-network-strings_iw.properties created Mon Oct 17 14:47:20 MDT 2011 using: gene-network 1.04.00 (53071), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 14:47:20 MDT 2011
 Legend.Lactose=<html><center>\u05DC\u05E7\u05D8\u05D5\u05D6</center></html>
 ManualLactoseInjection=\u05D9\u05D3\u05E0\u05D9
 LactoseMeterVisibilityControlCaption=\u05D4\u05E6\u05D2 \u05DE\u05D3 \u05DC\u05E7\u05D8\u05D5\u05D6
@@ -21,6 +21,7 @@ ModuleTitle.LactoseTransport=\u05D4\u05D5\u05D1\u05DC\u05EA \u05DC\u05E7\u05D8\u
 AutoLactoseInjection=\u05D0\u05D5\u05D8\u05D5\u05DE\u05D8\u05D9
 ModelElementLabel.CellMembrane=\u05DE\u05DE\u05D1\u05E8\u05E0\u05EA \u05D4\u05EA\u05D0
 ModelElementLabel.LacYGene=<html><i>lacY</i> \u05D2\u05DF</html>
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 Legend.LacI=<html><center>LacI</center></html>
 Toolbox.LacIPromoter=<html><center><i>lacI</i> \u05E4\u05E8\u05D5\u05DE\u05D5\u05D8\u05D5\u05E8</center></html>
 Legend.Polymerase=<html><center>RNA<br>\u05E4\u05D5\u05DC\u05D9\u05DE\u05E8\u05D0\u05D6</center></html>
