--- a/trunk/simulations-java/simulations/gene-expression-basics/changes.txt
+++ b/trunk/simulations-java/simulations/gene-expression-basics/changes.txt
@@ -1,3 +1,5 @@
+# 0.00.10 (58851) Nov 29, 2011
+11/29/11 Deploying to dev as a snapshot for use in discussions with design team.
 Added infrastructure and stubbed out implementations (i.e. static pictures) for 2nd and 3rd tabs.
 Made biomolecules move directly and quickly to attachment sites, rather than doing a "directed wandering".
 Changed the motion of wandering biomolecules to be faster and have a longer mean free path.
