--- a/simulations-java/simulations/gene-expression-basics/changes.txt
+++ b/simulations-java/simulations/gene-expression-basics/changes.txt
@@ -1,3 +1,4 @@
+Added "capture signal", whic"h is a flashing
 # 0.00.10 (58851) Nov 29, 2011
 11/29/11 Deploying to dev as a snapshot for use in discussions with design team.
 Added infrastructure and stubbed out implementations (i.e. static pictures) for 2nd and 3rd tabs.
